changed 01 to create output directory (if not present)

--- a/01-get-inventory/get-inventory.yml
+++ b/01-get-inventory/get-inventory.yml
@@ -6,6 +6,11 @@
 
   tasks:
 
+    - name: Create output directory (only if not present)
+      file:
+        path: "{{ file_path }}"
+        state: directory
+
     - name: Create inventory.csv file (if not present)
       file:
         path: "{{ file_path }}/inventory.csv"
