--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ inventory = ./hosts
 host_key_checking = False
 retry_files_enabled = False
 deprecation_warnings = False
+filter_plugins = plugins/filter/
 
 [persistent_connection]
 command_timeout = 60
