--- a/parsers/ios_inventory.yml
+++ b/parsers/ios_inventory.yml
@@ -14,6 +14,8 @@
 - name: GENERATE JSON DATA STRUCTURE
   json_template:
     template:
+      - key: hostname
+        value: "{{ inventory_hostname }}"
       - key: name
         value: "{{ item.matches.0}}"
       - key: description
