--- a/parsers/ios_inventory.yml
+++ b/parsers/ios_inventory.yml
@@ -7,7 +7,8 @@
 
 - name: MATCH PATTERN
   pattern_match:
-    regex: "NAME:\\s\\W+(.*?)\\W+\\,\\s\\DESCR:\\s\\W+(.*?)\\W+\\nPID:\\s(.*?)\\s+\\,\\s.*?,\\sSN:\\s(.*?)(\\n|$)"
+#    regex: "NAME:\\s\\W+(.*?)\\W+\\,\\s\\DESCR:\\s\\W+(.*?)\\W+\\nPID:\\s(.*?)\\s+\\,\\s.*?,\\sSN:\\s(.*?)(\\n|$)"
+    regex: "NAME:\\s\\W+(.*?)\\W+\\sDESCR:\\s\\W+(.*?)\\W+\\nPID:\\s(.*?)\\s+.*?SN:\\s(.+?)\\W"
     match_all: true
   register: section
 
